# YM_hakathon_Lenta_sept2023

./: .gitignore  EDA.ipynb  Modeling.ipynb  Preprocessing.ipynb  README.md  Untitled.ipynb  predict.py
docker/: Dockerfile  pyproject.toml
docker/src/: app.py
for_docker/: Dockerfile  config.yaml  pyproject.toml
for_docker/src/: app.py  predict.py  preprocessing.py
for_docker/src/models/: group_1_cat_11.pkl  group_1_cat_5.pkl  group_1_cat_6.pkl  group_1_cat_8.pkl  group_2_cat_1.pkl  group_2_cat_10.pkl  group_2_cat_11.pkl  group_2_cat_12.pkl  group_2_cat_4.pkl  group_2_cat_7.pkl  group_2_cat_8.pkl  group_3_cat_10.pkl  group_3_cat_12.pkl  group_3_cat_3.pkl  group_3_cat_6.pkl  group_3_cat_8.pkl  group_3_cat_9.pkl
models/: group_1_cat_1.pkl  group_1_cat_12.pkl  group_1_cat_2.pkl  group_1_cat_3.pkl  group_1_cat_4.pkl  group_1_cat_7.pkl  group_1_cat_9.pkl  group_2_cat_2.pkl  group_2_cat_3.pkl  group_2_cat_5.pkl  group_2_cat_6.pkl  group_2_cat_9.pkl  group_3_cat_1.pkl  group_3_cat_11.pkl  group_3_cat_12.pkl  group_3_cat_2.pkl  group_3_cat_4.pkl  group_3_cat_5.pkl  group_3_cat_7.pkl
